<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Inherited Icy Parent POM -->
    <parent>
        <artifactId>pom-icy</artifactId>
        <groupId>org.bioimageanalysis.icy</groupId>
        <version>2.1.0</version>
    </parent>

    <!-- Parent Project Information -->
    <groupId>plugins.fmp</groupId>
    <artifactId>multiPlugins</artifactId>
    <version>2.4.4</version>
    <packaging>pom</packaging>

    <name>Multi Plugins Parent</name>
    <description>Parent project for m_multiCAFE, m_multiSPOTS and m_multiTools shared library</description>

    <organization>
        <name>IDEEV UMR EGCE (CNRS-IRD-Paris-Saclay)</name>
        <url>https://www.egce.universite-paris-saclay.fr/</url>
    </organization>

    <licenses>
        <license>
            <name>GNU GPLv3</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>mygithublogin</id>
            <name>Frederic Marion-Poll</name>
            <url>https://mywebpage.net</url>
            <roles>
                <role>founder</role>
                <role>lead</role>
                <role>architect</role>
                <role>developer</role>
                <role>debugger</role>
                <role>tester</role>
                <role>maintainer</role>
                <role>support</role>
            </roles>
        </developer>
    </developers>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--
          Target runtime compatibility:
          ICY 2.5.x is commonly deployed with Java 8, so we compile plugins/libraries
          to Java 8 bytecode to keep them runnable on older installations.
        -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!-- icy-kernel Maven version ≠ Icy application version (e.g. 2.5.4.0). Nexus may lag; see icy-kernel listings on Pasteur Nexus. -->
        <icy-kernel.version>2.5.1</icy-kernel.version>
        <!-- Match ICY "JFree Common library for Icy" and "JFree Chart library for Icy" plugins at runtime -->
        <jfree-common.version>1.0.24</jfree-common.version>
        <jfreechart.version>1.5.3</jfreechart.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>icy-kernel</artifactId>
                <version>${icy-kernel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>flanagan</artifactId>
                <version>1.1.1</version>
            </dependency>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>vecmath</artifactId>
                <version>1.6.1</version>
            </dependency>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>jfree-common</artifactId>
                <version>${jfree-common.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jfree</groupId>
                <artifactId>jfreechart</artifactId>
                <version>${jfreechart.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>parallel-colt</artifactId>
                <version>5.5.2</version>
            </dependency>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>javacl</artifactId>
                <version>1.0.6</version>
            </dependency>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>nherve-toolbox</artifactId>
                <version>1.3.2</version>
            </dependency>
            <dependency>
                <groupId>org.bioimageanalysis.icy</groupId>
                <artifactId>mask-editor</artifactId>
                <version>1.2.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>4.1.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>org.openpnp</groupId>
                <artifactId>opencv</artifactId>
                <version>4.5.1-2</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.36</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>1.7.36</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>icy</id>
            <name>Icy's Nexus</name>
            <url>https://icy-nexus.pasteur.fr/repository/Icy/</url>
        </repository>
        <repository>
            <id>freehep</id>
            <name>FreeHEP Repository</name>
            <url>https://java.freehep.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <modules>
    	<module>multiTools</module>
    	<module>multiCAFE</module>
    	<module>multiSPOTS</module>
    </modules>
</project>
